// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader renders normally 1`] = `
<header
  style={
    Object {
      "background": "rebeccapurple",
      "marginBottom": "1.45rem",
    }
  }
>
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": 960,
        "padding": "1.45rem 1.0875rem",
      }
    }
  >
    <h1
      className="MuiTypography-root MuiTypography-h1"
      style={
        Object {
          "fontSize": 45,
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "textDecoration": "none",
          }
        }
      >
        Test site title
      </a>
    </h1>
  </div>
</header>
`;

exports[`AppHeader renders without site title when the siteTitle prop is undefined 1`] = `
<header
  style={
    Object {
      "background": "rebeccapurple",
      "marginBottom": "1.45rem",
    }
  }
>
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": 960,
        "padding": "1.45rem 1.0875rem",
      }
    }
  >
    <h1
      className="MuiTypography-root MuiTypography-h1"
      style={
        Object {
          "fontSize": 45,
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "textDecoration": "none",
          }
        }
      >
        
      </a>
    </h1>
  </div>
</header>
`;
